<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teckemeyer.recipecostcalculatorv2.Credits"
    android:background="@drawable/my_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/credits_info1"
        android:id="@+id/txtCredit1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textColor="#fecd7e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/credits_info2"
        android:id="@+id/txtCredit2"
        android:layout_below="@+id/txtCredit1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:textColor="#fecd7e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/credit_thanks"
        android:id="@+id/txtThanks"
        android:layout_below="@+id/txtCredit2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="#ffffff"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/btnCreditsOK"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_gradient3"
        android:textColor="#ffffff" />
</RelativeLayout>
