<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/select_icon"
            android:id="@+id/txtIcon"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="20dp"
            android:paddingTop="12dp"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivIcon1"
            android:src="@drawable/ic_meat"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/txtIcon"
            android:layout_toEndOf="@+id/txtIcon"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/txtName"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_below="@+id/ivIcon5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/amount"
            android:id="@+id/txtAmount"
            android:layout_below="@+id/txtName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:layout_marginRight="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/unit"
            android:id="@+id/txtUnit"
            android:layout_below="@+id/txtAmount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:textColor="#ffffff"
            android:layout_marginRight="20dp"
            android:paddingBottom="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cost"
            android:id="@+id/txtCost"
            android:layout_below="@+id/txtUnit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff"
            android:paddingTop="15dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:textColor="#fecd7e"
            android:hint="@string/ingredient"
            android:textColorHint="#715c37"
            android:layout_alignBottom="@+id/txtName"
            android:layout_toEndOf="@+id/txtName"
            android:layout_toRightOf="@+id/txtName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etAmount"
            android:textColor="#fecd7e"
            android:hint="0"
            android:textColorHint="#715c37"
            android:layout_alignBottom="@+id/txtAmount"
            android:layout_toRightOf="@+id/txtAmount"
            android:layout_toEndOf="@+id/txtAmount"
            android:text="1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etCost"
            android:textColor="#fecd7e"
            android:textColorHint="#715c37"
            android:hint="0.00"
            android:text="1.00"
            android:layout_alignBottom="@+id/txtCost"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/txtCost" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:spinnerMode="dropdown"
            android:entries="@array/spinner_options"
            android:layout_alignTop="@+id/txtUnit"
            android:layout_toRightOf="@+id/txtUnit"
            android:layout_toEndOf="@+id/txtUnit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/nameWarning"
            android:id="@+id/txtNameWarning"
            android:layout_below="@+id/etName"
            android:layout_alignLeft="@+id/etName"
            android:layout_alignStart="@+id/etName"
            android:textColor="#ff0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/amountWarning"
            android:id="@+id/txtAmountWarning"
            android:layout_below="@+id/etAmount"
            android:layout_alignLeft="@+id/etAmount"
            android:layout_alignStart="@+id/etAmount"
            android:textColor="#ff0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/costWarning"
            android:id="@+id/txtCostWarning"
            android:layout_below="@+id/txtCost"
            android:layout_alignLeft="@+id/etCost"
            android:layout_alignStart="@+id/etCost"
            android:textColor="#ff0000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivIcon2"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivIcon1"
            android:layout_toEndOf="@+id/ivIcon1"
            android:src="@drawable/ic_vegetables"
            android:layout_marginRight="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivIcon3"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivIcon2"
            android:layout_toEndOf="@+id/ivIcon2"
            android:src="@drawable/ic_fruit" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivIcon4"
            android:layout_below="@+id/ivIcon1"
            android:layout_toRightOf="@+id/txtIcon"
            android:layout_toEndOf="@+id/txtIcon"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_cheese" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivIcon5"
            android:layout_below="@+id/ivIcon2"
            android:layout_toRightOf="@+id/ivIcon1"
            android:layout_toEndOf="@+id/ivIcon1"
            android:src="@drawable/ic_spice" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivIcon6"
            android:layout_below="@+id/ivIcon3"
            android:layout_alignLeft="@+id/ivIcon3"
            android:layout_alignStart="@+id/ivIcon3"
            android:src="@drawable/ic_other" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtCostWarning">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btnCancel"
                android:background="@drawable/my_gradient2"
                android:textColor="#ffffff"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/imageView" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/btnSubmit"
                android:background="@drawable/my_gradient4"
                android:textColor="#ffffff"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/imageView" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>
