<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teckemeyer.recipecostcalculatorv2.EditUsedIngredient"
    android:background="@drawable/my_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/txtIngredientName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fecd7e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/txtIngredientDescription"
        android:layout_below="@+id/txtIngredientName"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/amount"
        android:id="@+id/textView6"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/txtIngredientDescription"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp"
        android:paddingBottom="5dp"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editIngredientAmount"
        android:textColor="#fecd7e"
        android:textColorHint="#5e4c2d"
        android:hint="1"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="X"
        android:id="@+id/textView7"
        android:textColor="#ffffff"
        android:padding="5dp"
        android:layout_alignBottom="@+id/editIngredientAmount"
        android:layout_toEndOf="@+id/editIngredientAmount"
        android:layout_marginRight="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDivisor"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:spinnerMode="dropdown"
        android:entries="@array/spinner_amount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/unit"
        android:id="@+id/textView8"
        android:layout_below="@+id/editIngredientAmount"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:textColor="#ffffff"
        android:layout_marginRight="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerUnit"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:background="@drawable/my_gradient2"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/btnOK"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:background="@drawable/my_gradient4"
            android:textColor="#ffffff" />
    </LinearLayout>

</RelativeLayout>
