<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teckemeyer.recipecostcalculatorv2.NewRecipe"
    android:background="@drawable/my_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/relativeLayout"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivAddToRecipe"
                android:src="@drawable/ic_add_circle_outline_white_24dp"
                android:onClick="addToNewRecipe"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="15dp"
                android:padding="5dp"
                android:background="@drawable/my_gradient2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_to_recipe"
                android:id="@+id/txtAddToRecipe"
                android:textColor="#ffffff"
                android:onClick="addToNewRecipe"
                android:layout_alignTop="@+id/ivAddToRecipe"
                android:layout_toRightOf="@+id/ivAddToRecipe"
                android:layout_toEndOf="@+id/ivAddToRecipe"
                android:padding="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name"
                android:id="@+id/textView2"
                android:textColor="#ffffff"
                android:layout_below="@+id/ivAddToRecipe"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:paddingTop="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editRecipeName"
                android:textColor="#fecd7e"
                android:paddingBottom="10dp"
                android:layout_alignTop="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/nameWarning"
                android:id="@+id/txtRecipeWarning"
                android:layout_below="@+id/editRecipeName"
                android:layout_alignLeft="@+id/editRecipeName"
                android:layout_alignStart="@+id/editRecipeName"
                android:textColor="#ff0000"
                android:visibility="invisible" />
        </RelativeLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="233dp"
            android:id="@+id/listViewRecipeIngredients"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:choiceMode="singleChoice" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/btnSubmitRecipe"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/my_gradient2"
                android:textColor="#ffffff" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btnSubmitRecipe"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/total_cost"
                    android:id="@+id/txtTotalCost"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="#fecd7e"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="$0.00"
                    android:id="@+id/txtTotalCostValue"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
